<resources>
    <string name="app_name">Capstone_Stage_2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="signed_out">Signed out</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="sign_out">Sign Out</string>
    <string name="go_to_messages">Go to message screen</string>

    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="server_client_id">943821402097-7ahevm8alvldk3b7opalup6h1b695ig4.apps.googleusercontent.com</string>
    <string name="signed_in">Signed in</string>
    <string name="auth_code_fmt">Auth Code: %s</string>

    <string name="google_status_fmt">Email User: %1$s (verified: %2$b)</string>


    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="loading">Loading…</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Update Profile</string>



    <string name="desc">Image description</string>
    <string name="hint">Text view</string>
    <string name="Message_content">Message content</string>
    <string name="date">mm/dd/yyyy</string>
    <string name="Type_here">Type here</string>
    <string name="create_account">create account</string>
    <string name="verify_email">verify email</string>
    <string name="emailpassword_title_text">emailpassword title text</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="Communicate">Communicate</string>
    <string name="Go_To_Messages">Go To Messages</string>
    <string name="Setting">Setting</string>
    <string name="Title">Title</string>
    <string name="Waiting_for_loading_information">Open messages screen to load info here.</string>
    <string name="Display_name">Display name</string>
    <string name="User_name">User name</string>
    <string name="User_picture_URL">User picture URL</string>
    <string name="Update_profile">Update profile</string>
    <string name="Welcome">Welcome</string>
    <string name="Authentication_failed">Authentication failed.</string>
    <string name="Failed_to_send_verification_email">Failed to send verification email.</string>
    <string name="Verification_email_sent_to">Verification email sent to </string>
    <string name="You_clicked">You clicked </string>
    <string name="send_button">Send button</string>
    <string name="for_test">This is for test.</string>
    <string name="Authentication_passed">Authentication passed.</string>
    <string name="getItemId">getItemId </string>
    <string name="on_row_number"> on row number </string>












    desc
</resources>
