<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/nav_create_account"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/create_account" />
        <item
            android:id="@+id/nav_verify_email"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/verify_email" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sign_out" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_go_to_messages"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Go_To_Messages" />
            <item
                android:id="@+id/nav_Setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Setting" />
        </menu>
    </item>

</menu>
