<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/user_profile_image"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/person_icon"
        app:layout_constraintEnd_toStartOf="@id/tvMessageName"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc" />

    <TextView
        android:id="@+id/sender_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textColor="@color/blue_bright"
        android:textSize="12sp"


        app:layout_constraintStart_toEndOf="@id/user_profile_image"
        app:layout_constraintTop_toTopOf="parent"


        />

    <TextView
        android:id="@+id/message_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Message_content"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/user_profile_image"
        app:layout_constraintTop_toBottomOf="@id/sender_user"


        />

    <TextView
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
</android.support.constraint.ConstraintLayout>
